fix: scrollbar style

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,7 @@ html {
 }
 *::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 * {
   scrollbar-width: 6px;
